--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="accordion">
           <div class="accordion-item">
             <button class="accordion-header">
-              <p>What is Frontend Mentor, and how will it help me?</p>
+              <span>What is Frontend Mentor, and how will it help me?</span>
               <img class="toggle-img" src="assets/images/icon-plus.svg" alt="">
             </button>
             <div class="accordion-collapse">
@@ -42,7 +42,7 @@
           </div>
           <div class="accordion-item">
             <button class="accordion-header">
-              <p>Is Frontend Mentor free?</p>
+              <span>Is Frontend Mentor free?</span>
               <img class="toggle-img" src="assets/images/icon-plus.svg" alt="">
             </button>
             <div class="accordion-collapse">
@@ -54,7 +54,7 @@
           </div>
           <div class="accordion-item">
             <button class="accordion-header">
-             <p>Can I use Frontend Mentor projects in my portfolio?</p>
+            <span>Can I use Frontend Mentor projects in my portfolio?</span>
             <img class="toggle-img" src="assets/images/icon-plus.svg" alt="">
             </button>
             <div class="accordion-collapse">
@@ -66,7 +66,7 @@
           </div>
           <div class="accordion-item">
             <button class="accordion-header">
-              <p>How can I get help if I'm stuck on a Frontend Mentor challenge?</p>
+              <span>How can I get help if I'm stuck on a Frontend Mentor challenge?</span>
               <img class="toggle-img" src="assets/images/icon-plus.svg" alt="">
             </button>
             <div class="accordion-collapse">
